# data-versioning

./: .gitignore  dvc.yaml  pyproject.toml
data/: .gitignore  airlinedelaycauses_DelayedFlights.csv.dvc
