[tool.poetry]
name = "data-versioning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvclive = "^1.3.1"
pandas = "^1.5.2"
pyaml = "^21.10.1"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
